--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Lewis Benson",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.4"
   }
 }
