update to use express add in message feature

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "author": "Lewis Benson",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.4"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   }
 }
